# vacs-data

./: .pre-commit-config.yaml  README.md  package-lock.json
.github/: CODEOWNERS
.github/actions/deploy-dataset/: action.yml
.github/workflows/: autofix.yml  ci-dataset.yml  ci-gate.yml  ci-rust.yml  deploy-dataset.yml  release-tools.yml  tag-airac.yml
dataset/EDGG/: positions.json
dataset/EDGG/profiles/: EDGG_DFAN.json  (+13 more)
dataset/EDMM/: positions.toml  stations.toml
dataset/EDWW/: positions.json  stations.json
dataset/EDXX/: positions.toml  stations.toml
dataset/EE/: positions.toml
dataset/EF/: positions.toml  stations.toml
dataset/EG/: positions.toml  stations.toml
dataset/EI/: positions.toml  stations.toml
dataset/EK/: EKDK.json  positions.toml  stations.toml
dataset/EN/: positions.json  stations.json
dataset/EP/: stations.toml
dataset/ES/: positions.json  stations.json
dataset/EV/: positions.toml  stations.toml
dataset/FA/: positions.json  stations.json
dataset/LB/: positions.json  stations.json
dataset/LI/: positions.json  stations.json
dataset/LM/: positions.json  stations.json
dataset/LO/: positions.json  positions.toml  stations.json  stations.toml
dataset/LR/: positions.toml  stations.toml
dataset/LU/: positions.toml  stations.toml
dataset/VH/: positions.json
dataset/WS/: positions.json
docs/dataset/: README.md  positions.md  profiles.md
docs/schemas/: positions.schema.json  profiles.schema.json  stations.schema.json
tools/: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  cliff.toml  deny.toml
(+134 files in other folders)
