[workspace]
resolver = "3"
members = ["cli", "diagnostics", "importer", "validator"]

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/vacs-project/vacs-data"
publish = false

[workspace.dependencies]
clap = { version = "4.5.60", features = ["derive"] }
console = "0.16.2"
encoding_rs = "0.8.35"
encoding_rs_io = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
toml = { version = "1.0.3", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
vacs-data-diagnostics = { path = "./diagnostics" }
vacs-data-importer = { path = "./importer" }
vacs-data-validator = { path = "./validator" }
vacs-protocol = { git = "https://github.com/vacs-project/vacs", branch = "v2", default-features = false, features = ["vatsim"] }
vacs-vatsim = { git = "https://github.com/vacs-project/vacs", branch = "v2", default-features = false, features = ["coverage"] }
